DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/components/_page-transition.scss
+++ b/wp-content/themes/denholm/scss/components/_page-transition.scss
@@ -375,6 +375,7 @@
       transform: none;
       margin: 0 auto;
       padding: 0;
+      height: auto;
     }
 
     .nav {
